añadido botón para cambiar color del div con id simonfere

--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
 </head>
 <body>
     <h1>Ejecicio uno colaboración</h1>
+
+    <div id="simonfere" style="background-color: green;">
+        <button id="simonfere_boton" onclick="cambiarColorBoton()" style="width: 100px; height: 100px;">simonfere</button>
+    </div>
 </body>
+<script src="simonfere.js"></script>
 </html>
