index.html: se ha introducido un nuevo div y boton para Hugo

--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
 </head>
 <body>
     <h1>Ejecicio uno colaboración</h1>
+    <div id="divHugo">
+        Hugo
+    </div>
+    <button id="botonHugo">Hugo</button>
 </body>
+<script src="Hugo.js"></script>
 </html>
