index.html: se añade el boton y el div de ana, ana.js: se añade el javascript para cambiar los colores

--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ejericico de prueba</title>
+    <script src="ana.js"></script>
 </head>
 <body>
     <h1>Ejecicio uno colaboración</h1>
+
+    <button id="buttonAna">Ana</button>
+    <div id="divAna">Ana</div>
 </body>
 </html>
