Añadido boton y div con nombre, y JavaScript para cambiar color

--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ejericico de prueba</title>
 </head>
+
 <body>
     <h1>Ejecicio uno colaboración</h1>
+
+    <button id="buttonPaula" onclick="cambiarColor()">Paula</button>
+
+    <div id="divPaula">Paula</div>
 </body>
+<script src="paula.js"></script>
+
 </html>
