--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ejericico de prueba</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Ejecicio uno colaboración</h1>
-</body>
+    <div id="div">
+      <button onclick="cambiarColorFondo();" id="btn">Jorge</button>
+    </div>
+    <script src="jorge.js"></script>
+  </body>
 </html>
