index.html: Modificado con boostrap

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ejericico de prueba</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0
+.0/css/bootstrap.min.css">
 </head>
 <body>
     <h1>Ejecicio uno colaboración</h1>
@@ -11,6 +13,11 @@
     <div id="simonfere" style="background-color: green;">
         <button id="simonfere_boton" onclick="cambiarColorBoton()" style="width: 100px; height: 100px;">simonfere</button>
     </div>
+    <script src="simonfere.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/p
+opper.min.js"></script>
+<!-- Latest compiled JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.
+min.js"></script>
 </body>
-<script src="simonfere.js"></script>
 </html>
