Daniel Martin: Añadido Boton

--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="Daniel.js"></script>
     <title>Ejericico de prueba</title>
 </head>
 <body>
     <h1>Ejecicio uno colaboración</h1>
+    <div id="div">
+        <input type="button" value="Daniel Martin" id="botonDM" onclick="cambiarFondo()"> 
+    </div>
 </body>
 </html>
