--- a/index.html
+++ b/index.html
@@ -3,33 +3,46 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="Daniel.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ejericico de prueba</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0
-.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <script src="ana.js"></script>
 </head>
 
 <body>
     <h1>Ejecicio uno colaboración</h1>
+    <div id="div">
+        <button onclick="cambiarColorFondo();" id="btn">Jorge</button>
+    </div>
 
     <div id="simonfere" style="background-color: green;">
-        <button id="simonfere_boton" onclick="cambiarColorBoton()" style="width: 100px; height: 100px;">simonfere</button>
+        <button id="simonfere_boton" onclick="cambiarColorBoton()"
+            style="width: 100px; height: 100px;">simonfere</button>
     </div>
+
     <script src="simonfere.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/p
 opper.min.js"></script>
-<!-- Latest compiled JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.
+    <!-- Latest compiled JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.
 min.js"></script>
 </body>
+
 </html>
-    <div id="div">
-        <button onclick="cambiarColorFondo();" id="btn">Jorge</button>
-      </div>
-    <button id="buttonAna">Ana</button>
-    <div id="divAna">Ana</div>
+    <div id="div2">
+        <input type="button" value="Daniel Martin" id="botonDM" onclick="cambiarFondo()"> 
+    </div>
+<div id="div">
+    <button onclick="cambiarColorFondo();" id="btn">Jorge</button>
+</div>
+<button id="buttonAna">Ana</button>
+<div id="divAna">Ana</div>
+
+<button id="buttonPaula" onclick="cambiarColor()">Paula</button>
+
+<div id="divPaula">Paula</div>
 </body>
 <script src="simonfere.js"></script>
-<script src="jorge.js"></script>
-
 </html>
